[package]
name = "swe-llmmodel-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokenizer implementations for RustML — BPE, SentencePiece, HuggingFace"

[lib]
path = "main/src/lib.rs"

[[bin]]
name = "swe-llmmodel-tokenizer"
path = "main/src/bin/tokenizer_cli.rs"

[dependencies]
swe-llmmodel-gguf.workspace = true
thiserror.workspace = true
regex.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
clap.workspace = true
anyhow.workspace = true
