[package]
name = "swe-ml-architectures"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.93"
authors.workspace = true
description = "Model architectures - LSTM, Transformer, TCN, N-BEATS, and time series data pipeline"
keywords = ["machine-learning", "time-series", "lstm", "transformer", "neural-network"]
categories = ["science", "mathematics"]

[lib]
path = "src/lib.rs"

[package.metadata.struct-engine]
application_type = "lib"

[dependencies]
swe-ml-training.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
