[package]
name = "swe-ml-embedding"
description = "Embedding layer — maps discrete tokens to continuous vectors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
swe-ml-tensor.workspace = true
thiserror.workspace = true
