[package]
name = "swe-ml-embedding"
description = "Embedding layer — maps discrete tokens to continuous vectors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
daemon = ["axum", "tokio", "clap", "anyhow", "env_logger", "rustml-model", "rustml-gguf", "rustml-tokenizer", "rustml-inference-layers"]

[[bin]]
name = "swe-ml-embed"
path = "src/bin/embed_serve.rs"
required-features = ["daemon"]

[dependencies]
swe-ml-tensor.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = { workspace = true }
log.workspace = true

# Daemon-only dependencies (behind "daemon" feature)
axum = { version = "0.8", features = ["json"], optional = true }
tokio = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
rustml-model = { workspace = true, optional = true }
rustml-gguf = { workspace = true, optional = true }
rustml-tokenizer = { workspace = true, optional = true }
rustml-inference-layers = { workspace = true, optional = true }
