[package]
name = "swe-ml-normalization"
description = "Normalization and activation primitives — LayerNorm, RMSNorm, GELU, SiLU"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
swe-ml-tensor.workspace = true
thiserror.workspace = true
