[package]
name = "llm_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "llmc — developer CLI for llmserv (infer, hub, gguf, tokenizer, load)"

[[bin]]
name = "llmc"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
tokio.workspace = true
swe-llmmodel-model.workspace = true
swe-llmmodel-quantizer.workspace = true
rustml-thread-config.workspace = true
llmcompute.workspace = true
rustml-generation.workspace = true
swe-llmmodel-gguf.workspace = true
swe-llmmodel-download.workspace = true
swe-llmmodel-io.workspace = true
swe-llmmodel-tokenizer.workspace = true
log.workspace = true
env_logger.workspace = true
rustml-arch-llama.workspace = true
rustml-arch-gpt2.workspace = true
rustml-arch-falcon.workspace = true
rustml-arch-mixtral.workspace = true
rustml-arch-gemma3.workspace = true
rustml-arch-gemma4.workspace = true
rustml-arch-bert.workspace = true
rustml-arch-nomic-bert.workspace = true
# For `llmc load` — native load testing (oha-equivalent, no external binary).
reqwest.workspace = true
futures-util.workspace = true
hdrhistogram = "7.5"
