[package]
name = "swellmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP daemon for RustML LLM inference — serves OpenAI-compatible completions API"

[lib]
path = "main/src/lib.rs"

[[bin]]
name = "swellmd"
path = "main/src/bin/serve.rs"

# Diagnostic binary for P9 investigation — dumps first-token
# logits from native_rust forward pass for a fixed token sequence.
[[bin]]
name = "dump-logits-native"
path = "main/src/bin/dump_logits_native.rs"

# Content-correctness regression tests. Live under main/tests/
# because the crate uses a nested layout (lib.rs is in main/src/);
# Cargo's tests/ auto-discovery doesn't reach that dir, so each
# integration test needs an explicit [[test]] entry.
[[test]]
name = "content_correctness"
path = "main/tests/content_correctness.rs"

[features]
default = []
# Enables the llama.cpp-backed model backend. Pulls in the
# `rustml-backend-llama-cpp` crate with its own `llama-cpp` feature active,
# which in turn requires a C++ toolchain (cmake + MSVC/g++/clang) once the
# `llama-cpp-2` integration lands. Default builds stay pure-Rust.
backend-llama-cpp = [
    "dep:rustml-backend-llama-cpp",
    "rustml-backend-llama-cpp/llama-cpp",
]

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
rayon.workspace = true
swe-ml-tensor.workspace = true
swe-ml-embedding.workspace = true
swe-llmmodel-layers.workspace = true
swe-llmmodel-model.workspace = true
swe-llmmodel-tokenizer.workspace = true
swe-llmmodel-loader.workspace = true
rustml-prefill.workspace = true
rustml-thread-config.workspace = true
rustml-generation.workspace = true
llmbackend.workspace = true
rustml-backend-llama-cpp = { workspace = true, optional = true }
tokio-stream = "0.1"
futures-util.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
reqwest.workspace = true
